# codexbar-gnome

./: .gitignore  CONTRIBUTING.md  README.md  build.sh  cookie_importer.py  extension.js  install.sh  install_shim.sh  log_window.js  metadata.json  prefs.js  secret.js  stylesheet.css  test_all_providers.js  usageApi.js
adapters/: CliSubprocessFetcher.js  SoupApiFetcher.js
schemas/: org.gnome.shell.extensions.codexbar.gschema.xml
ssl_helper_package/: README.md  pyproject.toml
ssl_helper_package/src/codexbar_ssl_helper/: __init__.py  helper.py
ssl_helper_package/src/codexbar_ssl_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
