[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codexbar-ssl-helper"
version = "0.1.1"
description = "A utility to discover, extract, and trust the local Antigravity server self-signed SSL certificate."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.scripts]
codexbar-ssl-helper = "codexbar_ssl_helper.helper:main"

[tool.setuptools.packages.find]
where = ["src"]
